--- a/config/gittoc.yml
+++ b/config/gittoc.yml
@@ -1,7 +1,7 @@
 sections:
   -
     title: 'Learning Ruby'
-    summary: 'I had wanted to learn more about specific methods'
+    summary: 'I want to learn more about specific methods'
     tags:
       - map
   -
@@ -9,6 +9,11 @@ sections:
     summary: 'I want to get do end to end testing'
     tags:
       - capybara
+  -
+    title: 'Learning Rake'
+    summary: "Rake is a great tool and I've wanted to get better at it."
+    tags:
+      - rake
 
 ignore:
   words:
