Add title. fix broken test

--- a/test/fixtures/raw_tweets.yml
+++ b/test/fixtures/raw_tweets.yml
@@ -37,3 +37,11 @@ contact:
   hashtags: 'email'
   text: 'I love tacos!'
   image: ''
+
+title:
+  tweet_id: 126
+  user_id: 456
+  username: 'dave'
+  hashtags: 'title, feel'
+  text: 'I love tacos!'
+  image: ''
